# Declare the build backend (required)
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "pynacl-middleware-canonical-example"
version = "0.0.1"
description = "An example for the usage of the pynacl middleware reference implementation"
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
keywords = ["pynacle", "middleware", "aiohttp"]
dependencies = [
    "aiohttp",
    "aiohttp_middlewares",
    "pynacl"
]

[project.optional-dependencies]
test = ["pytest"]