[metadata]
name = pynacl-middleware-canonical-example
version = 0.0.1
description = An example for the usage of the pynacl middleware reference implementation
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel de Souza
author_email = daniel@cosmicdna.co.uk
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/CosmicDNA/pynacl-middleware-canonical-example
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = pynacle middleware aiohttp

[options]
zip_safe = True
install_requires =
    aiohttp
    aiohttp_middlewares
    pynacl
packages =
    pynacl_middleware_canonical_example
    pynacl_middleware_canonical_example.websocket
    pynacl_middleware_canonical_example.websocket.nacl_midleware

[options.entry_points]
main =
    pynacl_middleware_canonical_example = pynacl_middleware_canonical_example:main
